# now-lms

./: .check.sh  .coveragerc  .dockerignore  .editorconfig  .flake8  .git_pod.sh  .gitattributes  .gitignore  .gitpod.sh  .gitpod.yml  .lint.sh  .mypy.ini  .prettierignore  .prettierrc  .pylintrc  .replit  .yarnrc  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.html  Dockerfile  Dockerfile copy  LICENSE  MANIFEST.in  Output.txt  Procfile  README.md  app.json  babel.cfg  changes.html  codecov.yml  config.html  cookies.txt  db.html  dev_ops.html  development.txt  docker-entry-point.sh  docs.txt  dreamhost.html  (+34 more)
.do/: deploy.template.yaml
.github/: copilot-instructions.md
.github/workflows/: check_multiple_databases.yml  ci.yml  coverage.yml  coveralls.yml  dbs.yml  publish.yml  publish_to_pypi.yml  pypi.yml  python-package.yml  python.yml  python36.yml  refactor.yml  release.yml
CONTRIBUTING/: index.html
adsense/: index.html
blog/: index.html
changes/: index.html
configure/: index.html
course-creator/: index.html
course-creator/certificate-customization/: index.html
course-creator/course-configuration/: index.html
course-creator/course-creation/: index.html
course-creator/forum-messaging/: index.html
course-creator/markdown-guide/: index.html
course-creator/master-class-organizer-guide/: index.html
course-creator/moderator-management/: index.html
course-creator/sections-resources/: index.html
course-creator/slideshow-setup/: index.html
database_management_manual/: index.html
db/: index.html
dev/: delete_py_version.py  ensure_headers.py  freeze_python_packages.py  lang.sh  lint.sh  profile_tests.sh  remove_fuzzy_po.py  run_test.sh  server.sh  test.sh  test_fast.sh  test_session_persistence.sh
dev_ops/: index.html
development/PAYPAL_MANUAL_TESTING/: index.html
development/database_management_manual/: index.html
development/paypal_integration/: index.html
development/python-features/: index.html
development/query_guide/: index.html
development/session_fixtures_guide/: index.html
docs/: CONTRIBUTING.md  adsense.md  blog.md  configure.md  database_management_manual.md  db.md  dev_ops.md  dreamhost.md  faq.md  index.html  index.md  logo.md  mail.md  master-class-organizer-guide.md  nginx.conf  oci.md  payments.md  paypal_integration.md  pypi.md  references.md  release.md  rocky.md  server-admin-rhel.md  server-admin-ubuntu.md  server-administration.md  session-implementation.md  session-troubleshooting.md  setup-conf.md  setup.md  test-performance.md  theming.md
docs/blog/: .authors.yml  index.md
docs/course-creator/: certificate-customization.md  course-configuration.md  course-creation.md  forum-messaging.md  index.md  markdown-guide.md  master-class-organizer-guide.md  moderator-management.md  sections-resources.md  slideshow-setup.md
docs/development/: CALENDAR_UTILS_TEST_SUMMARY.md  FEATURE_VALIDATION_REPORT.md  PAYPAL_MANUAL_TESTING.md  VALIDATION_SUMMARY.md  database_management_manual.md  paypal_integration.md  python-features.md  query_guide.md  session_fixtures_guide.md
docs/samples/: mysql.sh  psql.sh
dreamhost/: index.html
es/: index.html
es/CONTRIBUTING/: index.html
es/blog/: index.html
faq/: index.html
logo/: index.html
mail/: index.html
master-class-organizer-guide/: index.html
now_lms/: __init__.py  __main__.py  auth.py  bi.py  cache.py  cache_utils.py  calendar_utils.py  cli.py  config.py  db.py  demo_mode.py  forms.py  i18n.py  logs.py  mail.py  mail_test_send.py  misc.py  session_config.py  themes.py  version.py  worker_config.py
oci/: index.html
payments/: index.html
paypal_integration/: index.html
pypi/: index.html
references/: index.html
release/: index.html
rocky/: index.html
samples/: Caddyfile
search/: search_index.js  search_index.json
server-admin-rhel/: index.html
server-admin-ubuntu/: index.html
server-administration/: index.html
setup/: index.html
setup-conf/: index.html
sing-off/: index.html
test-performance/: index.html
tests/: .test.sh  README.md  __init__.py  acciones.py  conftest.py  forms.py  funciones.py  smoke_test_validator.py  test_a.py  test_admin_enrollment.py  test_admin_enrollment_coverage.py  test_admin_user_type_change.py  test_adsense_comprehensive.py  test_alembic_upgrade.py  test_all_routes_comprehensive.py  test_announcements.py  test_audio_player_consistency.py  test_audit_field_validation.py  test_audit_integration.py  test_auth.py  test_auth_functions.py  test_automatic_audit_fields.py  test_base_de_datos.py  test_basicos.py  test_bi_coverage.py  test_blog_navbar.py  test_blog_view_counter.py  test_cache_compatibility.py  test_cache_invalidation.py  test_calendar_endtoend.py  test_calendar_utils_comprehensive.py  test_calendar_utils_error_paths.py  test_certificate_access_control.py  test_certificate_advanced_coverage.py  test_certificate_advanced_coverage.py.backup  test_certificate_bug.py  test_certificate_simple_coverage.py  test_certificate_views_comprehensive.py  test_certifications_comprehensive.py  test_cli.py  (+105 more)
theming/: index.html
(+504 files in other folders)
