[project]
name = "now_lms"
description = "Simple to {install, use, configure, mantain} learning management system."
readme = "README.md"
requires-python = ">=3.8"
authors = [
  {name = "BMO Soluciones", email = "soluciones.bmo@gmail.com"},
]
classifiers = [
  'Development Status :: 1 - Planning',
  'Framework :: Flask',
  'License :: OSI Approved :: Apache Software License',
  'Natural Language :: Spanish',
  'Operating System :: OS Independent',
  'Programming Language :: Python :: 3 :: Only',
  'Programming Language :: Python :: 3.8',
  'Programming Language :: Python :: 3.9',
  'Programming Language :: Python :: 3.10',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: Implementation :: CPython'
]
dynamic = ["version", "dependencies"]

[project.scripts]
lmsctl = "now_lms:command"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[build-system]
requires = ["setuptools", "wheel"]  # PEP 508 specifications.
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 127

[tool.setuptools.packages]
find = {namespaces = false}  # Disable implicit namespaces
